# WebOS-Magna

src/application/: Application.cpp  Application.h  ApplicationAccessor.h  ApplicationEntry.h  ApplicationEventHandler.cpp  ApplicationEventHandler.h  ApplicationEventLoop.cpp  ApplicationEventLoop.h  ApplicationIntroducer.cpp  ApplicationIntroducer.h  ApplicationWindowManager.cpp  ApplicationWindowManager.h  ApplicationWindowManagerAccessor.h  ApplicationWindowManager_p.h  Application_p.cpp  Application_p.h  CMakeLists.txt  GUIEventNotifier.cpp  GUIEventNotifier.h  NotifierMessage.h  OSGUIBehaviourExRequester.h  WindowEventNotifier.cpp  WindowEventNotifier.h  WindowIntroducer.cpp  WindowIntroducer.h  application_lib.h
src/basedef/: AbstractedEventArgs.cpp  AbstractedEventArgs.h  AbstractedNotifier.cpp  AbstractedNotifier.h  AtomicType.h  BasePtr.h  BaseTimer.h  BaseTypes.h  CMakeLists.txt  Color.cpp  Color.h  Comparer.h  CompilerTimeAssert.h  ContentValues.h  DefaultDeleter.h  DelegatorCollection.h  DrawingPath.h  DyadCoordinate.h  EventDelegator.h  GenericVariant.h  IsBaseOf.h  JSONArray.cpp  JSONArray.h  JSONObject.cpp  JSONObject.h  JSONReader.cpp  JSONReader.h  JSONValue.cpp  JSONValue.h  JSONWriter.cpp  JSONWriter.h  Line.h  LockGuard.h  Message.cpp  Message.h  Monitor.h  MonitoredTarget.h  NullType.h  Pointer.h  PointerTrait.h  (+48 more)
src/basedef/private/: Callable_p.h  Comparer_p.h  CompilerTimeAssert_p.cpp  CompilerTimeAssert_p.h  ContentValues_p.h  DrawingPath_p.h  DyadCoordinate_p.h  GenericVariant_p.h  ImplAtomicType.h  Line_p.h  Polygon_p.h  RectRegion_p.cpp  RectRegion_p.h  RunnableContext_p.h  Size_p.h  TriggerTrait_p.h  Trigger_p.h
src/basegui/: AbsoluteLayout.cpp  AbsoluteLayout.h  Button.cpp  Button.h  ButtonGroup.cpp  ButtonGroup.h  ButtonImplementor.cpp  ButtonImplementor.h  CMakeLists.txt  CommonEventArgs.h  Controller.cpp  Controller.h  ControllerAccessor.h  ControllerImplementor.h  Controller_p.cpp  Controller_p.h  DefaultIFrameImpl.cpp  DefaultIFrameImpl.h  DefinedLengthTypeCounter.h  DelegatorCollection.cpp  DelegatorCollection.h  EventArgConstants.h  EventArgsAccessor.h  EventDelegator.h  EventIndexer.h  GUIConstantMapper.cpp  GUIConstantMapper.h  GUIConstants.h  GUIDef.h  GUIEventDelegatorManager.cpp  GUIEventDelegatorManager.h  GUIEventIndexer.h  GlobalPopOutWindowIntroducer.cpp  GlobalPopOutWindowIntroducer.h  HoverEventArgs.h  IFrame.h  ImageLabel.cpp  ImageLabel.h  ImageLabelImplementor.cpp  ImageLabelImplementor.h  (+77 more)
src/mnetwork/: FtpClient.cpp  FtpClient.h  FtpReponseMessage_p.h  FtpRequestMessage.cpp  FtpRequestMessage.h  FtpResponseFactory.cpp  FtpResponseFactory.h  FtpResponseMessage.h  HttpRequestClient.cpp  HttpRequestClient.h  HttpRequestMessage.cpp  HttpRequestMessage.h  HttpResponseFactory.cpp  HttpResponseFactory.h  HttpResponseMessage.h  HttpResponseMessage_p.h  JSONArray.cpp  JSONArray.h  JSONObject.cpp  JSONObject.h  JSONReader.cpp  JSONReader.h  JSONValue.cpp  JSONValue.h  MailAccessReponse.h  MailClient.cpp  MailClient.h  XMLDocument.cpp  XMLDocument.h  XMLNode.cpp  XMLNode.h  XMLNode_p.h
src/mruntime/: ApplicationLoader.cpp  ApplicationLoader.h  ApplicationManager.cpp  ApplicationManager.h  ApplicationTaskBlock.cpp  ApplicationTaskBlock.h  ControllerManager.cpp  ControllerManager.h  DesktopObject.h  EventArgsMapper.h  EventDispatcherNode.cpp  EventDispatcherNode.h  ExceptionCollector.h  GlobalEventReceiver.cpp  GlobalEventReceiver.h  GlobalQtWidgetInitReceptionist.cpp  GlobalQtWidgetInitReceptionist.h  OSAttachControllersBehaviourNotifier.cpp  OSAttachControllersBehaviourNotifier.h  OSBehaviourNotifier.cpp  OSBehaviourNotifier.h  OSBehaviourNotifierHandler.cpp  OSBehaviourNotifierHandler.h  OSDetachControllersBehaviourNotifier.cpp  OSDetachControllersBehaviourNotifier.h  OSQtWidgetInitBehaviourNotifier.cpp  OSQtWidgetInitBehaviourNotifier.h  OSRenderBehaviourNotifier.cpp  OSRenderBehaviourNotifier.h  OSScriptRunBehaviourNotifier.cpp  OSScriptRunBehaviourNotifier.h  OSStartApplicationBehaviourNotifier.cpp  OSStartApplicationBehaviourNotifier.h  OSStartWindowBehaviourNotifier.cpp  OSStartWindowBehaviourNotifier.h  OSWindowCloseBehaviourNotifier.cpp  OSWindowCloseBehaviourNotifier.h  RuntimeContainer.cpp  RuntimeContainer.h  RuntimeScript.cpp  (+8 more)
src/msystem/: BatteryDeviceInfo.cpp  BatteryDeviceInfo.h  CMakeLists.txt  CpuInfo.cpp  CpuInfo.h  CpuInfo_p.h  FileSystemInfo.cpp  FileSystemInfo.h  FileSystemInfo_p.h  FileSystemUsageQueryResult.cpp  FileSystemUsageQueryResult.h  FileSystemUsageQueryResult_p.h  SystemContextUninitializedException.h  SystemInfo.cpp  SystemInfo.h  system_lib.h
src/multimedia/: AudioOutObject.cpp  AudioOutObject.h  AudioOutObject_p.h  QtWidgetInitReceptionist.h  VLCVideoController.cpp  VLCVideoController.h  VLCVideoWidget.cpp  VLCVideoWidgetDelegator.h  multimedia.pro  multimedia_global.h  multimedia_lib.h
src/qt_glue/: Date.cpp  Date.h  DesktopInfo.cpp  DesktopInfo.h  FileDialog.cpp  FileDialog.h  FileDir.cpp  FileDir.h  FontMetrics.cpp  FontMetrics.h  Time.cpp  TimeObject.h  qt_glue_lib.h
src/qt_glue_img/: Image.cpp  Image.h  ImageResourceHandler.cpp  ImageResourceHandler.h  ImageResourceHandlerHelper.cpp  ImageResourceHandlerHelper.h  Image_p.h  qt_glue_img.h
src/render/: AppearanceEffect.h  Canvas2dDrawer.cpp  Canvas2dDrawer.h  Drawer.h  DrawerToolKit.h  DyadCoordinateMapper.h  FillBrush.cpp  FillBrush.h  Font.cpp  Font.h  Gradient.cpp  Gradient.h  LinearGradient.cpp  LinearGradient.h  ManipulateDevice.h  ManipulateEngine.h  Manipulator.h  ManipulatorDevice.cpp  ManipulatorEngine.cpp  Pen.cpp  Pen.h  RadialGradient.cpp  RadialGradient.h  (+16 more)
(+59 files in other folders)
